--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -11,8 +11,22 @@
 
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
 </head>
 <body>
-    <h4>This is the index page</h4>
+   
+
+    <!-- HOME/DETAILS -->
+    <div data-role="page" id="home-page" data-theme="a">
+        <div data-role="header"></div>
+        <h2>Home Page with/for details</h2>
+        <div data-role="content">
+            <p>stuffs</p>
+        </div>
+
+        <div data-role="footer">
+            <h1>copyright Coding5eva 2017</h1>
+        </div>
+    </div>
 </body>
 </html>
