hyejin added signin page & links to pages 3.2-3.4

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -22,6 +22,20 @@
         <h2>Home Page with/for details</h2>
         <div data-role="content">
             <p>stuffs</p>
+            <a data-role="button" href="#signin-page">Sign in</a>
+            <a data-role="button" href="#convert-page">Convert</a>
+        </div>
+
+        <div data-role="footer">
+            <h1>copyright Coding5eva 2017</h1>
+        </div>
+    </div>
+
+    <div data-role="page" id="signin-page" data-theme="a">
+        <div data-role="header"></div>
+        <h2>Signin Page</h2>
+        <div data-role="content">
+            <p>signin stuffs</p>
         </div>
 
         <div data-role="footer">
