recents and favorites

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -24,6 +24,8 @@
             <p>stuffs</p>
             <a data-role="button" href="#signin-page">Sign in</a>
             <a data-role="button" href="#convert-page">Convert</a>
+            <a data-role="button" href="#recents-page">Recents</a>
+            <a data-role="button" href="#favorites-page">Favorites</a>
         </div>
 
         <div data-role="footer">
@@ -36,6 +38,30 @@
         <h2>Signin Page</h2>
         <div data-role="content">
             <p>signin stuffs</p>
+        </div>
+
+        <div data-role="footer">
+            <h1>copyright Coding5eva 2017</h1>
+        </div>
+    </div>
+
+    <div data-role="page" id="recents-page" data-theme="a">
+        <div data-role="header"></div>
+        <h2>Recents Page</h2>
+        <div data-role="content">
+            <p>recent stuff</p>
+        </div>
+
+        <div data-role="footer">
+            <h1>copyright Coding5eva 2017</h1>
+        </div>
+    </div>
+
+    <div data-role="page" id="favorites-page" data-theme="a">
+        <div data-role="header"></div>
+        <h2>Favorites Page</h2>
+        <div data-role="content">
+            <p>favorite stuff</p>
         </div>
 
         <div data-role="footer">
