hyejin added convert page, no pbi

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -45,6 +45,18 @@
         </div>
     </div>
 
+    <div data-role="page" id="convert-page" data-theme="a">
+        <div data-role="header"></div>
+        <h2>Signin Page</h2>
+        <div data-role="content">
+            <p>convert stuffs</p>
+        </div>
+
+        <div data-role="footer">
+            <h1>copyright Coding5eva 2017</h1>
+        </div>
+    </div>
+
     <div data-role="page" id="recents-page" data-theme="a">
         <div data-role="header"></div>
         <h2>Recents Page</h2>
