--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -29,11 +29,15 @@
         </div>
     </div>
 
-    <div data-role="page" id="signin-page" data-theme="a">
+    <div data-role="page" id="login-page" data-theme="a">
         <div data-role="header"></div>
         <h2>Sign in Page</h2>
         <div data-role="content">
-            <p>signin stuffs</p>
+            Username : <input type="text" id="usernameInput" /><br />
+            Password : <input type="password" id="passwordInput" /><br />
+            Email : <input type="text" id="emailInput" /><br />
+
+            <input type="button" data-theme="c" id="loginBtn" value="Log in" onclick="Login()" />
         </div>
 
         <div data-role="footer">
