hyejin login in progress 9.1

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -31,11 +31,10 @@
 
     <div data-role="page" id="login-page" data-theme="a">
         <div data-role="header"></div>
-        <h2>Sign in Page</h2>
+        <h2>Log in Page</h2>
         <div data-role="content">
             Username : <input type="text" id="usernameInput" /><br />
             Password : <input type="password" id="passwordInput" /><br />
-            Email : <input type="text" id="emailInput" /><br />
 
             <input type="button" data-theme="c" id="loginBtn" value="Log in" onclick="Login()" />
         </div>
