--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -40,6 +40,10 @@
 
             <input type="button" data-theme="c" id="loginBtn" value="Log in" onclick="Login()" />
         </div>
+        <div data-role="footer">
+            <h1>copyright Coding5eva 2017</h1>
+        </div>
+    </div>
 
     <div data-role="page" id="signup-page" class="light">
         <div data-role="header"></div>
