--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -12,6 +12,7 @@
 
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <script src=http://www.unitconversion.org/converter3/converter3.js></script>
     <script type="text/javascript" src="scripts/main.js"></script>
 </head>
 <body>
@@ -69,7 +70,12 @@
             <p>convert stuffs</p>
         </div>
 
-        <form style="padding:0;margin:0" name="cat=Weight">
+        <select id="convSelector" name=left size=1 style="font-family:Tahoma;font-size:100%">
+            <option value="" selected>Please select:</option>
+            <option value="weight">Weight</option>
+        </select>
+
+        <form style="padding:0;margin:0" name="cat=Weight" id="weight">
             <table align=center style="width:0;font-family:Tahoma;font-size:100%" border=0 cellpadding=0 cellspacing=0>
                 <tr><td style="padding:1.2ex 1.5ex;width:50%;font-family:Tahoma;font-size:87%">From:<br><input style="width:100%;font-family:Tahoma;font-size:100%" type=text name="bindid=left;base=1"></td><td style="padding:1.2ex 1.5ex;width:50%;font-family:Tahoma;font-size:87%">To:<br><input style="width:100%;font-family:Tahoma;font-size:100%" type=text name="bindid=right"></td></tr>
                 <tr>
@@ -82,8 +88,7 @@
                 </tr>
             </table>
         </form>
-        <script src=http://www.unitconversion.org/converter3/converter3.js></script>
-
+        
         <div data-role="footer">
             <h1>copyright Coding5eva 2017</h1>
         </div>
