hyejin fixed login

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -39,6 +39,7 @@
             Password : <input type="password" id="passwordInput" /><br />
 
             <input type="button" data-theme="c" id="loginBtn" value="Log in" onclick="Login()" />
+            <p id="pLogin"></p>
         </div>
         <div data-role="footer">
             <h1>copyright Coding5eva 2017</h1>
