hyejin replaced login&signup buttons with logout after login, focus on username field, allows enter key to login 16.1

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -35,7 +35,7 @@
         <div data-role="header"></div>
         <h2>Log in Page</h2>
         <div data-role="content">
-            Username : <input type="text" id="usernameInput" /><br />
+            Username : <input type="text" id="usernameInput" autofocus/><br />
             Password : <input type="password" id="passwordInput" /><br />
 
             <input type="button" data-theme="c" id="loginBtn" value="Log in" onclick="Login()" />
