hyejin added link to credit api source & hide it :D

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -118,14 +118,11 @@
                         </tr>
                     </table>
                 </form>
-
-
-
-
             </div>
         </div>
         <div data-role="footer">
             <script src="http://www.unitconversion.org/converter3/converter3.js"></script>
+            <a href="http://www.unitconversion.org/">UnitConversion.org</a>
             <h1>copyright Coding5eva 2017</h1>
         </div>
     </div>
