--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -54,7 +54,7 @@
             Password : <input type="text" id="password" /><br />
             Email : <input type="text" id="email" /><br />
 
-            <input type="button" data-icon="plus" data-theme="c" id="addBtn" value="Sign Up" onclick="addUsers()" />
+            <input type="button" data-icon="plus" data-theme="c" id="addBtn" value="Sign Up" onclick="signUp()" />
             <p id="addUsers" />
         </div>
 
