finished my part for sprint4

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -22,8 +22,8 @@
         <div data-role="header"></div>
         <h2>Home Page with/for details</h2>
         <div data-role="content">
-            <p id="country"></p>
-            <p>stuffs</p>
+            <p id="apiDetails"></p>
+            <p id="mongoDetails"></p>
         </div>
 
         <div data-role="footer">
