hyejin soft merge to kristi's work

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -1100,13 +1100,13 @@
                         </tr>
                     </table>
                     </form>
-                    <button id="saveRecents" type="button" onclick="recents()">Save conversion to recents</button>
+                    <!--<button id="saveRecents" type="button" onclick="recents()">Save conversion to recents</button>-->
                     <!-- CURRENT CONVERTER END -->
 
                     <button id="addFav" onclick="Favorite()">Favorite this</button>
                     <p id="pConv"></p>
 
-</div><!-- end div w/id of converterForm-->
+        </div><!-- end div w/id of converterForm-->
         </div>
         <div data-role="footer">
             <script src="http://www.unitconversion.org/converter3/converter3.js"></script>
