kristi save recents to mongo

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -1105,7 +1105,7 @@
 
                     <button id="addFav" onclick="Favorite()">Favorite this</button>
                     <p id="pConv"></p>
-
+                    <p id="pRec"></p>
         </div><!-- end div w/id of converterForm-->
         </div>
         <div data-role="footer">
