hyejin retrieve & display task complete 25.2, merging my code w/ kristi's

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -1134,7 +1134,10 @@
         <div data-role="header"></div>
         <h2>Favorites Page</h2>
         <div data-role="content">
-            <p>favorite stuff</p>
+            <div>
+                <ul data-role="listview" data-autodividers="true" data-theme="b" id="favorites"></ul>
+            </div>
+            <p id="pFav"></p>
         </div>
 
         <div data-role="footer">
