hyejin adding some lost things from merge

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -1144,5 +1144,18 @@
             <h1>copyright Coding5eva 2017</h1>
         </div>
     </div>
+
+    <div data-role="page" id="tests-page" class="light">
+        <div data-role="header"></div>
+        <h2>Tests Page</h2>
+        <div data-role="content">
+            <p id="pTests"></p>
+            <button id="testFav" onclick="FavTest()">Test: adding favorite</button>
+        </div>
+
+        <div data-role="footer">
+            <h1>copyright Coding5eva 2017</h1>
+        </div>
+    </div>
 </body>
 </html>
