--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -56,8 +56,7 @@
             Email : <input type="text" id="email" /><br />
 
             <input type="button" data-icon="plus" data-theme="c" id="addBtn" value="Sign Up" onclick="signUp()" />
-            <button id="signupTest" type="button" onclick="signTest()">Sign Up Teset</button>
-            <p id="addUsers" />
+            <p id="addUsers"></p>
         </div>
 
         <div data-role="footer">
@@ -1155,6 +1154,8 @@
             <div>
                 <h3>Test that 1kg is equal to 1000g</h3>
                 <button onclick="adminTestConversion()">Show Form</button>
+                <button type="button" onclick="signTest()">Sign Up Test</button>
+                <p id="suTest"></p>
                 <form style="padding:0;margin:0" name="cat=Weight" id="testerForm" class="hide">
                     <table align=center style="width:0;font-family:Tahoma;font-size:100%" border=0 cellpadding=0 cellspacing=0>
                         <tr><td style="padding:1.2ex 1.5ex;width:50%;font-family:Tahoma;font-size:87%">From:<br><input style="width:100%;font-family:Tahoma;font-size:100%" type=text name="bindid=left;base=1"></td><td style="padding:1.2ex 1.5ex;width:50%;font-family:Tahoma;font-size:87%">To:<br><input style="width:100%;font-family:Tahoma;font-size:100%" type=text name="bindid=right"></td></tr>
