--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -20,38 +20,38 @@
 <body>
    
     <!-- HOME/DETAILS -->
-    <div data-role="page" id="home-page" class="light">
-        <div data-role="header" data-position="fixed" data-id="main-header" id="menu">
-            <h3></h3>
-            <div data-role="navbar" class="ui-navbar" role="navigation">
+    <div data-role="page" id="home" class="light">
+        <div data-role="none" data-fullscreen="true" data-position="fixed" data-id="main-header" id="menu">
+            <div data-role="navbar" class="ui-navbar">
                 <ul>
-                    <li><a href="#home-page" data-role="button" data-icon="home" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active">Home</a></li>
-                    <li class="rm"><a href="#login-page" data-role="button" id="btnLogin" data-icon="user" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-b">Log in</a></li>
-                    <li><a href="#convert-page" data-role="button" data-icon="search" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c">Convert</a></li>
+                    <li><a href="#home" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active"><img class="icon" src="images/home.png" />Home</a></li>
+                    <li class="rm"><a href="#login" data-role="button" id="btnLogin" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-b"><img class="icon" src="images/user.png" />Log in</a></li>
+                    <li><a href="#convert" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c"><img class="icon" src="images/search.png" />Convert</a></li>
                 </ul>
             </div>
+            <span id="user">You are a Guest</span>
             <img src="images/sun.png" id="lightBtn" onclick="light()" /><img src="images/moon.png" id="darkBtn" onclick="dark()" />
         </div>
         <div data-role="content" class="ui-content">
-            <p id="apiDetails"></p>
+            <div id="apiDetails"><table></table></div>
             <p id="mongoDetails"></p>
         </div>
 
-        <div data-role="footer">
+        <div data-role="footer" data-fullscreen="true" data-position="fixed">
             <h1>copyright Coding5eva 2017</h1>
         </div>
     </div>
 
-    <div data-role="page" id="login-page" class="light">
-        <div data-role="header" data-position="fixed" data-id="main-header" id="menu">
-            <h3></h3>
-            <div data-role="navbar" class="ui-navbar" role="navigation">
+    <div data-role="page" id="login" class="light">
+        <div data-role="none" data-fullscreen="true" data-position="fixed" data-id="main-header" id="menu">
+            <div data-role="navbar" class="ui-navbar">
                 <ul>
-                    <li><a href="#home-page" data-role="button" data-icon="home" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-a">Home</a></li>
-                    <li class="rm"><a href="#login-page" data-role="button" id="btnLogin" data-icon="user" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-b">Log in</a></li>
-                    <li><a href="#convert-page" data-role="button" data-icon="search" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c">Convert</a></li>
+                    <li><a href="#home" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active"><img class="icon" src="images/home.png" />Home</a></li>
+                    <li class="rm"><a href="#login" data-role="button" id="btnLogin" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-b"><img class="icon" src="images/user.png" />Log in</a></li>
+                    <li><a href="#convert" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c"><img class="icon" src="images/search.png" />Convert</a></li>
                 </ul>
             </div>
+            <span id="user">You are a Guest</span>
             <img src="images/sun.png" id="lightBtn" onclick="light()" /><img src="images/moon.png" id="darkBtn" onclick="dark()" />
         </div>
         <h2>Log in</h2>
@@ -59,25 +59,25 @@
             Username : <input type="text" id="usernameInput" autofocus/><br />
             Password : <input type="password" id="passwordInput" /><br />
 
-            <input type="button" data-theme="c" id="loginBtn" value="Log in" onclick="Login()" />
+            <button type="button" id="loginBtn" onclick="Login()">Log In</button>
             <p id="pLogin"></p>
-            <a href="#signup-page">Don't have an account?</a>
+            <a href="#signup">Don't have an account?</a>
         </div>
-        <div data-role="footer">
+        <div data-role="footer" data-fullscreen="true" data-position="fixed">
             <h1>copyright Coding5eva 2017</h1>
         </div>
     </div>
 
-    <div data-role="page" id="signup-page" class="light">
-        <div data-role="header" data-position="fixed" data-id="main-header" id="menu">
-            <h3></h3>
-            <div data-role="navbar" class="ui-navbar" role="navigation">
+    <div data-role="page" id="signup" class="light">
+        <div data-role="none" data-fullscreen="true" data-position="fixed" data-id="main-header" id="menu">
+            <div data-role="navbar" class="ui-navbar">
                 <ul>
-                    <li><a href="#home-page" data-role="button" data-icon="home" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-a">Home</a></li>
-                    <li class="rm"><a href="#login-page" data-role="button" id="btnLogin" data-icon="user" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-b">Log in</a></li>
-                    <li><a href="#convert-page" data-role="button" data-icon="search" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c">Convert</a></li>
+                    <li><a href="#home" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active"><img class="icon" src="images/home.png" />Home</a></li>
+                    <li class="rm"><a href="#login" data-role="button" id="btnLogin" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-b"><img class="icon" src="images/user.png" />Log in</a></li>
+                    <li><a href="#convert" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c"><img class="icon" src="images/search.png" />Convert</a></li>
                 </ul>
             </div>
+            <span id="user">You are a Guest</span>
             <img src="images/sun.png" id="lightBtn" onclick="light()" /><img src="images/moon.png" id="darkBtn" onclick="dark()" />
         </div>
         <h2>Sign up</h2>
@@ -86,25 +86,25 @@
             Password : <input type="text" id="password" /><br />
             Email : <input type="text" id="email" /><br />
 
-            <input type="button" data-icon="plus" data-theme="c" id="addBtn" value="Sign Up" onclick="signUp()" />
+            <input type="button" data-icon="plus" id="addBtn" value="Sign Up" onclick="signUp()" />
             <p id="addUsers"></p>
         </div>
 
-        <div data-role="footer">
+        <div data-role="footer" data-fullscreen="true" data-position="fixed">
             <h1>copyright Coding5eva 2017</h1>
         </div>
     </div>
 
-    <div data-role="page" id="convert-page" class="light">
-        <div data-role="header" data-position="fixed" data-id="main-header" id="menu">
-            <h3></h3>
-            <div data-role="navbar" class="ui-navbar" role="navigation">
+    <div data-role="page" id="convert" class="light">
+        <div data-role="none" data-fullscreen="true" data-position="fixed" data-id="main-header" id="menu">
+            <div data-role="navbar" class="ui-navbar">
                 <ul>
-                    <li><a href="#home-page" data-role="button" data-icon="home" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-a">Home</a></li>
-                    <li class="rm"><a href="#login-page" data-role="button" id="btnLogin" data-icon="user" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-b">Log in</a></li>
-                    <li><a href="#convert-page" data-role="button" data-icon="search" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c">Convert</a></li>
+                    <li><a href="#home" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active"><img class="icon" src="images/home.png" />Home</a></li>
+                    <li class="rm"><a href="#login" data-role="button" id="btnLogin" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-b"><img class="icon" src="images/user.png" />Log in</a></li>
+                    <li><a href="#convert" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c"><img class="icon" src="images/search.png" />Convert</a></li>
                 </ul>
             </div>
+            <span id="user">You are a Guest</span>
             <img src="images/sun.png" id="lightBtn" onclick="light()" /><img src="images/moon.png" id="darkBtn" onclick="dark()" />
         </div>
         <h2>Convert</h2>
@@ -1143,74 +1143,76 @@
                     <!--<button id="saveRecents" type="button" onclick="recents()">Save conversion to recents</button>-->
                     <!-- CURRENT CONVERTER END -->
 
-                    <button id="addFav" onclick="Favorite()">Add to favorites</button>
+                    <button id="addFav" data-icon="plus" data-iconpos="left" onclick="Favorite()">Add to favorites</button>
                     <p id="pConv"></p>
                     <p id="pRec"></p>
         </div><!-- end div w/id of converterForm-->
         </div>
-        <div data-role="footer">
+        <div data-role="footer" data-fullscreen="true" data-position="fixed">
             
             <a id="a" href="http://www.unitconversion.org/">UnitConversion.org</a>
             <h1>copyright Coding5eva 2017</h1>
         </div>
     </div>
 
-    <div data-role="page" id="recents-page" class="light">
-        <div data-role="header" data-position="fixed" data-id="main-header" id="menu">
-            <h3></h3>
-            <div data-role="navbar" class="ui-navbar" role="navigation">
+    <div data-role="page" id="recents" class="light">
+        <div data-role="none" data-fullscreen="true" data-position="fixed" data-id="main-header" id="menu">
+            <div data-role="navbar" class="ui-navbar">
                 <ul>
-                    <li><a href="#home-page" data-role="button" data-icon="home" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-a">Home</a></li>
-                    <li class="rm"><a href="#login-page" data-role="button" id="btnLogin" data-icon="user" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-b">Log in</a></li>
-                    <li><a href="#convert-page" data-role="button" data-icon="search" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c">Convert</a></li>
+                    <li><a href="#home" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active"><img class="icon" src="images/home.png" />Home</a></li>
+                    <li class="rm"><a href="#login" data-role="button" id="btnLogin" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-b"><img class="icon" src="images/user.png" />Log in</a></li>
+                    <li><a href="#convert" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c"><img class="icon" src="images/search.png" />Convert</a></li>
                 </ul>
             </div>
+            <span id="user">You are a Guest</span>
             <img src="images/sun.png" id="lightBtn" onclick="light()" /><img src="images/moon.png" id="darkBtn" onclick="dark()" />
         </div>
         <h2>Recents</h2>
         <div data-role="content" class="ui-content">
             <h2></h2>
-            <p id="recentConversions"></p>
+            <div>
+                <ul data-role="listview" data-autodividers="true" id="recentConversions"></ul>
+            </div>
         </div>
 
-        <div data-role="footer">
+        <div data-role="footer" data-fullscreen="true" data-position="fixed">
             <h1>copyright Coding5eva 2017</h1>
         </div>
     </div>
 
-    <div data-role="page" id="favorites-page" class="light">
-        <div data-role="header" data-position="fixed" data-id="main-header" id="menu">
-            <h3></h3>
-            <div data-role="navbar" class="ui-navbar" role="navigation">
+    <div data-role="page" id="favorites" class="light">
+        <div data-role="none" data-fullscreen="true" data-position="fixed" data-id="main-header" id="menu">
+            <div data-role="navbar" class="ui-navbar">
                 <ul>
-                    <li><a href="#home-page" data-role="button" data-icon="home" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-a">Home</a></li>
-                    <li class="rm"><a href="#login-page" data-role="button" id="btnLogin" data-icon="user" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-b">Log in</a></li>
-                    <li><a href="#convert-page" data-role="button" data-icon="search" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c">Convert</a></li>
+                    <li><a href="#home" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active"><img class="icon" src="images/home.png" />Home</a></li>
+                    <li class="rm"><a href="#login" data-role="button" id="btnLogin" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-b"><img class="icon" src="images/user.png" />Log in</a></li>
+                    <li><a href="#convert" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c"><img class="icon" src="images/search.png" />Convert</a></li>
                 </ul>
             </div>
             <img src="images/sun.png" id="lightBtn" onclick="light()" /><img src="images/moon.png" id="darkBtn" onclick="dark()" />
         </div>
+        <span id="user">You are a Guest</span>
         <h2>Favorites</h2>
         <div data-role="content" class="ui-content">
             <div>
-                <ul data-role="listview" data-autodividers="true" data-theme="b" id="favorites"></ul>
+                <ul data-role="listview" data-autodividers="true" id="favList"></ul>
             </div>
             <p id="pFav"></p>
         </div>
 
-        <div data-role="footer">
+        <div data-role="footer" data-fullscreen="true" data-position="fixed">
             <h1>copyright Coding5eva 2017</h1>
         </div>
     </div>
 
-    <div data-role="page" id="tests-page" class="light">
-        <div data-role="header" data-position="fixed" data-id="main-header" id="menu">
+    <div data-role="page" id="tests" class="light">
+        <div data-role="none" data-fullscreen="true" data-position="fixed" data-id="main-header" id="menu">
             <h3></h3>
-            <div data-role="navbar" class="ui-navbar" role="navigation">
+            <div data-role="navbar" class="ui-navbar">
                 <ul>
-                    <li><a href="#home-page" data-role="button" data-icon="home" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-a">Home</a></li>
-                    <li class="rm"><a href="#login-page" data-role="button" id="btnLogin" data-icon="user" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-b">Log in</a></li>
-                    <li><a href="#convert-page" data-role="button" data-icon="search" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c">Convert</a></li>
+                    <li><a href="#home" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active"><img class="icon" src="images/home.png" />Home</a></li>
+                    <li class="rm"><a href="#login" data-role="button" id="btnLogin" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-b"><img class="icon" src="images/user.png" />Log in</a></li>
+                    <li><a href="#convert" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c"><img class="icon" src="images/search.png" />Convert</a></li>
                 </ul>
             </div>
             <img src="images/sun.png" id="lightBtn" onclick="light()" /><img src="images/moon.png" id="darkBtn" onclick="dark()" />
@@ -1242,7 +1244,7 @@
 
         </div>
 
-        <div data-role="footer">
+        <div data-role="footer" data-fullscreen="true" data-position="fixed">
             <h1>copyright Coding5eva 2017</h1>
             <script src="http://www.unitconversion.org/converter3/converter3.js"></script>
         </div>
