hyejin little fixes

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -38,10 +38,10 @@
             <img src="images/sun.png" id="lightBtn" onclick="light()" /><img src="images/moon.png" id="darkBtn" onclick="dark()" />
         </div>
         <h2>Location Info</h2>
-        <!--<div data-role="content" class="ui-content">
+        <div data-role="content" class="ui-content">
             <div id="apiDetails"><table></table></div>
             <p id="mongoDetails"></p>
-        </div>-->
+        </div>
 
         <div data-role="footer" data-fullscreen="true" data-position="fixed">
             <h1>copyright Coding5eva 2017</h1>
