hyejin changed css for navbar & footer

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -27,7 +27,7 @@
     <!-- HOME/DETAILS -->
     <div data-role="page" id="convert" class="light">
         <div data-role="none" data-fullscreen="true" data-position="fixed" data-id="main-header" id="menu">
-            <div data-role="navbar" class="ui-navbar">
+            <div data-role="navbar" class="custom-navbar">
                 <ul>
                     <li><a href="#convert" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active"><img class="icon" src="images/search.png" />Convert</a></li>
                     <li><a href="#details" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c"><img class="icon" src="images/home.png" />Details</a></li>
@@ -1087,7 +1087,7 @@
 
     <div data-role="page" id="login" class="light">
         <div data-role="none" data-fullscreen="true" data-position="fixed" data-id="main-header" id="menu">
-            <div data-role="navbar" class="ui-navbar">
+            <div data-role="navbar" class="custom-navbar">
                 <ul>
                     <li><a href="#convert" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active"><img class="icon" src="images/search.png" />Convert</a></li>
                     <li><a href="#details" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c"><img class="icon" src="images/home.png" />Details</a></li>
@@ -1113,7 +1113,7 @@
 
     <div data-role="page" id="details" class="light">
         <div data-role="none" data-fullscreen="true" data-position="fixed" data-id="main-header" id="menu">
-            <div data-role="navbar" class="ui-navbar">
+            <div data-role="navbar" class="custom-navbar">
                 <ul>
                     <li><a href="#convert" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active"><img class="icon" src="images/search.png" />Convert</a></li>
                     <li><a href="#details" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c"><img class="icon" src="images/home.png" />Details</a></li>
@@ -1136,7 +1136,7 @@
 
     <div data-role="page" id="signup" class="light">
         <div data-role="none" data-fullscreen="true" data-position="fixed" data-id="main-header" id="menu">
-            <div data-role="navbar" class="ui-navbar">
+            <div data-role="navbar" class="custom-navbar">
                 <ul>
                     <li><a href="#convert" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active"><img class="icon" src="images/search.png" />Convert</a></li>
                     <li><a href="#details" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c"><img class="icon" src="images/home.png" />Details</a></li>
@@ -1163,7 +1163,7 @@
 
     <div data-role="page" id="recents" class="light">
         <div data-role="none" data-fullscreen="true" data-position="fixed" data-id="main-header" id="menu">
-            <div data-role="navbar" class="ui-navbar">
+            <div data-role="navbar" class="custom-navbar">
                 <ul>
                     <li><a href="#convert" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active"><img class="icon" src="images/search.png" />Convert</a></li>
                     <li><a href="#details" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c"><img class="icon" src="images/home.png" />Details</a></li>
@@ -1196,7 +1196,7 @@
 
     <div data-role="page" id="favorites" class="light">
         <div data-role="none" data-fullscreen="true" data-position="fixed" data-id="main-header" id="menu">
-            <div data-role="navbar" class="ui-navbar">
+            <div data-role="navbar" class="custom-navbar">
                 <ul>
                     <li><a href="#convert" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active"><img class="icon" src="images/search.png" />Convert</a></li>
                     <li><a href="#details" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c"><img class="icon" src="images/home.png" />Details</a></li>
@@ -1221,8 +1221,8 @@
 
     <div data-role="page" id="tests" class="light">
         <div data-role="none" data-fullscreen="true" data-position="fixed" data-id="main-header" id="menu">
-            <div data-role="navbar" class="ui-navbar">
-                <div data-role="navbar" class="ui-navbar">
+            <div data-role="navbar" class="custom-navbar">
+                <div data-role="navbar" class="custom-navbar">
                     <ul>
                         <li><a href="#convert" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn-inline ui-btn-up-a ui-btn-active"><img class="icon" src="images/search.png" />Convert</a></li>
                         <li><a href="#details" data-role="button" data-iconpos="top" data-inline="true" class="ui-btn ui-btn-inline ui-btn-up-c"><img class="icon" src="images/home.png" />Details</a></li>
