hyejin continues updating navbar

--- a/ConversionApp/ConversionApp/index.html
+++ b/ConversionApp/ConversionApp/index.html
@@ -41,7 +41,7 @@
         <div data-role="content" class="ui-content">
             <div>
                 <select id="convSelector" name="select" size=1 style="font-family:Tahoma;font-size:100%">
-                    <option value="" selected>Please select:</option>
+                    <option value="" selected>Select category:</option>
                     <option value="weight">Weight</option>
                     <option value="length">Length</option>
                     <option value="currency">Currency</option>
